# rpo-2026

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/andro25/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/andro25/: MainActivity.kt  PinpadActivity.kt
app/src/main/java/com/example/andro25/nativelibs/: NativeLib.kt  TransactionEvents.kt
app/src/main/java/com/example/andro25/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/andro25/util/: EncoderUtil.kt
app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/andro25/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
